Adding favicon based on prefered color scheme

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -15,7 +15,8 @@
     <meta name="google-site-verification" content="KxErv3O9QKFpXjZxdmkQuVe0iwJS8iIUlHHqigwVFqU" />
     <link rel="stylesheet" href="./style/screen.css">
     <title>Interactive palen</title>
-    <link rel="icon" href="/pictures/icon.svg">
+    <!-- Favicon -->
+    <link rel="shortcute icon" type="image/png" href="img/favicon-dark.ico" id="faviconTag"/>
     <script
       src="https://cdn.socket.io/4.4.1/socket.io.min.js"
       integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H"
