--- a/Front-end/Info.html
+++ b/Front-end/Info.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/screen.css">
     <title>Interactive palen</title>
+    <!-- Favicon -->
+    <link rel="shortcute icon" type="image/png" href="img/favicon-dark.ico" id="faviconTag"/>
     <link rel="icon" href="/pictures/icon.svg">
     <script
       src="https://cdn.socket.io/4.4.1/socket.io.min.js"
